--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+		<title><%= htmlWebpackPlugin.options.title %></title>
+		
+		<!-- Start Single Page Apps for GitHub Pages -->
+		<script type="text/javascript">
+			(function(l) {
+				if (l.search) {
+					var q = {};
+					l.search.slice(1).split('&').forEach(function(v) {
+						var a = v.split('=');
+						q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+					});
+					if (q.p !== undefined) {
+						window.history.replaceState(null, null,
+							l.pathname.slice(0, -1) + (q.p || '') +
+							(q.q ? ('?' + q.q) : '') +
+							l.hash
+						);
+					}
+				}
+			}(window.location))
+		</script>
+		<!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
     <noscript>
