--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
 			}(window.location))
 		</script>
 		<!-- End Single Page Apps for GitHub Pages -->
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156074948-2"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-156074948-2');
+		</script>
   </head>
   <body>
     <noscript>
